# pc_perf

./: .gitignore  LICENSE  MANIFEST.in  README.md  START_GUIDE.md  __main__.py  check_project.py  cleanup_project.py  cython_builder.py  cython_setup.py  dao.py  log.py  main.py  monitor_V1.8.6.py  monitor_pc_perf_analysis.md  pc_perf.py  pc_perf_simple.py  pyproject.toml  requirements.txt  setup.py  start_server.py  task.sqlite  task_handle.py  test_comparison.py  update_paths.py  util.py  util.pyx  web.py
app/: __main__.py  advanced_analysis.py  api.py  comparison.py  comparison_report.py  database.py  db.py  excel_report.py  log.py  pc_perf.py  task_handle.py  util.py  view.py
app/core/: android_tools.py  device_manager.py  harmony_tools.py  ios_tools.py  monitor.py  pc_tools.py
client_perf/: __main__.py  api.py  comparison.py  db.py  task_handle.py  util.py
client_perf/core/: android_tools.py  device_manager.py  harmony_tools.py  ios_tools.py  monitor.py  pc_tools.py
core/: monitor.py  pc_tools.py
test_result/: index.html
