[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "client-perf"
version = "2.1.1"
description = "客户端性能采集与分析工具"
authors = [
    { name = "fanbozhou", email = "15525730080@163.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "fastapi",
    "uvicorn",
    "psutil",
    "pandas",
    "openpyxl",
    "aiosqlite",
    "apscheduler",
    "pydantic",
]

[project.scripts]
client-perf = "app.__main__:main"
