[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "client-perf"
version = "2.1.2"
description = "客户端性能采集与分析工具"
authors = [
    { name = "fanbozhou", email = "15525730080@163.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "py-ios-device>=2.0.0",
    "adbutils>=2.8.0",
    "psutil>=5.9.0",
    "pynvml>=11.5.0",
    "openpyxl>=3.1.0",
    "apscheduler>=3.10.0",
    "Pillow>=10.0.0",
    "pydantic",
    "pandas",
]

[project.scripts]
client-perf = "client_perf.__main__:main"
